# docpull

./: .editorconfig  .gitattributes  .gitignore  .infisical.json  .pre-commit-config.yaml  AGENTS.md  AUDIT-remediation.md  CHANGELOG-remediation.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EMOJI_CLEANUP.md  IMPROVEMENTS.md  LICENSE  METRICS.md  Makefile  PUBLISH.md  README.md  SECURITY.md  mise.toml  package.json  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements.txt  server.json  setup.py
bench/: .gitignore  CLAIMS.md  Dockerfile  Dockerfile.dockerignore  POSITIONING.md  PROGRAM.md  README.md  pyproject.toml
bench/baselines/: controlled-v2.fixture.json
bench/capabilities/: competitor-matrix-2026-07-14.yaml
bench/cases/: controlled-v1.yaml  controlled-v2.yaml  lifecycle-v2.yaml  live-neutral-extract-v1.yaml  live-owned-v1.yaml  live-search-v2.yaml
bench/claim/: README.md  evidence.example.yaml  policy-v1.yaml  policy-v2.yaml  provider-protocol-candidates.yaml
bench/experimental/external-suites/: README.md
bench/experimental/external-suites/wandr/: check.sh  lock.json  status.json
bench/fixtures/: manifest.json
bench/fixtures/site/: changelog.html  guide.html  index.html
bench/fixtures/v2/corpus/: record-001.md  record-002.md  record-003.md  record-004.md  record-005.md  record-006.md  record-007.md  record-008.md  record-009.md  record-010.md  record-011.md  record-012.md  record-013.md  record-014.md  record-015.md  record-016.md  record-017.md  record-018.md  record-019.md  record-020.md  record-021.md  record-022.md  record-023.md  record-024.md  record-025.md  record-026.md  record-027.md  record-028.md  record-029.md  record-030.md  record-031.md  record-032.md  record-033.md  record-034.md  record-035.md  record-036.md  record-037.md  record-038.md  record-039.md  record-040.md  (+40 more)
bench/fixtures/v2/extract/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html  12.html
bench/fixtures/v2/parse/: 01-plain.txt  02-markdown.md  03-document.docx  06-code.txt  10-unicode.md
bench/fixtures/v2/policy/: redirect-target.html  robots.txt
bench/fixtures/v2/research/: task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md  task-09.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-18.md  task-19.md  task-20.md
bench/pricing/: providers.yaml
bench/protocols/: README.md  future-extraction-quality-v1.yaml
bench/replays/controlled-v2/: change.fixture.01.json  change.fixture.02.json  change.fixture.03.json  change.fixture.04.json  change.fixture.05.json  change.fixture.06.json  change.fixture.07.json  change.fixture.08.json  change.fixture.09.json  change.fixture.10.json  change.fixture.11.json  change.fixture.12.json  crawl.fixture.graph-01.json  crawl.fixture.graph-02.json  crawl.fixture.graph-03.json  crawl.fixture.graph-04.json  crawl.fixture.graph-05.json  crawl.fixture.graph-06.json  extract.fixture.01.json  extract.fixture.02.json  extract.fixture.03.json  extract.fixture.04.json  extract.fixture.05.json  extract.fixture.06.json  extract.fixture.07.json  extract.fixture.08.json  extract.fixture.09.json  extract.fixture.10.json  extract.fixture.11.json  extract.fixture.12.json  lifecycle.context_ci.json  lifecycle.credential_non_persistence.json  lifecycle.eval_prepare.json  lifecycle.exact_diff.json  lifecycle.exports.json  lifecycle.lock_drift.json  lifecycle.offline_search.json  lifecycle.raw_contract.json  lifecycle.stable_identity.json  lifecycle.zero_budget.json  (+172 more)
bench/replays/fixture/: controlled.crawl.graph.json  controlled.extract.article.json
bench/results/: STATUS.yaml
bench/results/manual/: README.md
bench/results/manual/2026-07-14-live-neutral-crawl-v2/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json
bench/results/manual/2026-07-14-live-neutral-crawl-v4-analysis/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json  suite.yaml
bench/results/manual/2026-07-14-live-neutral-extract-v2/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json
bench/results/manual/2026-07-14-live-neutral-extract-v4-analysis/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json  suite.yaml
bench/results/manual/2026-07-14-live-neutral-extract-v5-current-v3/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json
bench/results/manual/2026-07-14-live-search-v2/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json
bench/results/manual/2026-07-14-live-search-v4-analysis/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json
bench/results/provisional/: STATUS.md
bench/results/provisional/2026-07-14-context-lifecycle-v1/: METHODOLOGY.md  README.md  REPORT.md  publication.manifest.json  report.json
bench/results/provisional/2026-07-14-live-neutral-crawl-v1/: COMPARISON.md  METHODOLOGY.md  README.md  comparison.json  publication.manifest.json  suite.yaml
bench/results/provisional/2026-07-14-live-neutral-v1-statistical/: COMPARISON.md  METHODOLOGY.md  README.md  (+2 more)
bench/results/readiness/: 2026-07-14-live-search-v2.json  2026-07-14-live-search-v2.md  README.md
bench/scripts/: generate_fixtures.py
bench/src/docpull_bench/: __init__.py  baselines.py  budget.py  challenges.py  claims.py  cli.py  comparison.py  evaluators.py  evidence.py  fixtures.py  integrity.py  lifecycle.py  models.py  pricing.py  publication.py  runner.py  sanitization.py  scoring.py  serialization.py  tokens.py
bench/tests/: test_baselines.py  test_challenges.py  test_claims.py  test_cli.py  test_command_adapter.py  test_comparison.py  test_docpull_adapter.py  test_evidence.py  test_fixtures.py  test_hosted_adapters.py  test_integrity.py  test_lifecycle.py  test_local_baselines.py  test_models.py  test_publication.py  test_runner.py  test_sanitization.py  test_scoring.py  test_tokens.py
(+704 files in other folders)
