[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpull-bench"
version = "0.2.0"
description = "Independent, reproducible web-context benchmark lab"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "docpull",
    "httpx>=0.28.1,<1",
    "markitdown[docx,pdf]>=0.1.0",
    "pydantic>=2.0",
    "pydantic-evals>=2.9.1,<3",
    "pyyaml>=6.0",
]

[project.scripts]
docpull-bench = "docpull_bench.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
docpull = {path = "..", editable = true}

[tool.setuptools.packages.find]
where = ["src"]
include = ["docpull_bench*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["A003"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--showlocals"]
